added documentation to the entire project

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Standard stuff ===============================================================
 
+# Documentation pages
+*.html
+*.css
+
 # Visual studio / PyCharm stuff
 .idea
 .vs
